Bug #980 On slave, replicate-wild-ignore-table=mysql.% sometimes lets GRANT/REVOKE in
Submitted: 2 Aug 2003 6:52 Modified: 2 Aug 2003 7:13
Reporter: Guilhem Bichot Email Updates:
Status: Closed
Category:Server: Replication Severity:S3 (Non-critical)
Version:4.0 OS:Any (all)
Assigned to: Guilhem Bichot Target Version:

[2 Aug 2003 6:52] Guilhem Bichot
Description:
From the customer's email:
> This doesn't work (GRANT/REVOKE is replicated with these options)
> replicate-wild-ignore-table=%.tmptbl%
> replicate-ignore-table=mysql.user
> replicate-ignore-table=mysql.db
> 
> This doesn't work either:
> replicate-wild-ignore-table=%.tmptbl%
> replicate-wild-ignore-table=mysql.%
> 
> but this does:
> #replicate-wild-ignore-table=%.tmptbl%
> replicate-ignore-table=mysql.user
> replicate-ignore-table=mysql.db

How to repeat:
This is because some code depends on unititialized values (tables->updating),
so, a priori, everybody can't repeat it.
I could repeat it with --replicate-wild-ignore-table=mysql.%:
MASTER> grant all on *.* to gbi@localhost;
was ok (not replicated), then
MASTER> grant all on test.* to gbi@localhost;
was wrong (replicated).

Suggested fix:
Will push a fix today.
[2 Aug 2003 7:13] Guilhem Bichot
Thank you for your bug report. This issue has been fixed in the latest
development tree for that product. You can find more information about
accessing our development trees at 
    http://www.mysql.com/doc/en/Installing_source_tree.html

Fixed in
ChangeSet@1.1549.1.1, 2003-08-02 16:10:26+02:00, guilhem@mysql.com