There were two wrong calls to tables_ok() in MySQL 4.0 (BUG#980), which are fixed now. In 4.1 there are 3 calls; 2 of them will be fixed when there is a merge; here I fix the 3rd, new one.